[tool.poetry]
name = "async-thread-multiproccessing"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yarikbritov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
